--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.63.4",
     "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
